# crewai_and_agentops_demo_2

./: Dockerfile.dev
.devcontainer/: devcontainer.json
READMEs/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
hit_music_only/: README.md  pyproject.toml
hit_music_only/src/hit_music_only/: crew.py  main.py
hit_music_only/src/hit_music_only/config/: agents.yaml  tasks.yaml
